[package]
name = "bytecursor"
version = "0.1.1"
edition = "2018"
license = "MIT"
description = "`No-std` replacement for `std::io::Read`, `std::io::Write`, and `std::io::Seek`"
repository = "https://github.com/yatima-inc/bytecursor/"
homepage = "https://github.com/yatima-inc/bytecursor/"
readme = "README.md"
documentation = "https://docs.rs/bytecursor"
categories = ["no-std"]
keywords = ["no_std", "io"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-std = {version = "3", default-features = false}
